--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,29 +60,32 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.28.0"
 
+    // Async Image
+    implementation "io.coil-kt:coil-compose:2.3.0"
+
     // Notifications
-    implementation "com.google.firebase:firebase-messaging:23.1.1"
-    implementation "com.google.firebase:firebase-messaging-ktx:23.1.1"
+    implementation "com.google.firebase:firebase-messaging:23.1.2"
+    implementation "com.google.firebase:firebase-messaging-ktx:23.1.2"
 
     // Preference DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.leanback:leanback:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-functions-ktx:20.2.2'
     implementation 'com.google.firebase:firebase-storage-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.2'
+//    implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.9.4'
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     testImplementation 'junit:junit:4.13.2'
